[package]
name = "drivers"
version = "0.1.0"
authors = ["azazdeaz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-embedded-hal = "0.3.0"
pwm-pca9685 = "0.3.0"
rppal = "0.12.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
clap = "3.0.0-beta.2"
sysinfo = "0.20.0"
ina219 = "0.1.0"

common = { path = "../common" }

[[bin]]
name = "try-motors"
path = "src/bin/try_motors.rs"


[[bin]]
name = "try-system-info"
path = "src/bin/try_system_info.rs"