[package]
name = "grpc-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"

futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.7"
drivers = { path = "../drivers" }
openvslam-wrap = { path = "../openvslam-wrap" }
common = { path = "../common" }
nalgebra = { version = "0.27", features = ["serde-serialize"] }


[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "grpc-server"
path = "src/main.rs"