[package]
name = "mirrors"
version = "0.1.0"
authors = ["Polgár András <azazdeaz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
gdnative = "0.9.3"
tungstenite = "0.13.0"
async-tungstenite = "0.13.0"
json = "0.12.4"
nalgebra = { version = "0.27", features = ["serde-serialize"] }
ndarray = "0.15.1"
ndarray-linalg = "0.13.1"
url = "2.2.0"
prost = "0.7"
base64 = "0.13.0"
hashbrown = "*"
scarlet = "1.1.0"
crossbeam-channel = "0.5"
yaml-rust = "0.4.5"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tonic = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
common = { path = "../common" }
# gdnative = { path = "../../godot-rust/gdnative" }

[build-dependencies]
prost-build = { version = "0.7.0" }
tonic-build = "0.4"


# [[bin]]
# name = "proto-gen"
# path = "src/proto_gen.rs"


