[package]
name = "openvslam-wrap"
version = "0.1.0"
authors = ["Polgár András <azazdeaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "sync", "process", "rt-multi-thread", "time", "rt"] }
tonic = "0.4"
prost = "0.7"
async_zmq = "0.3.2"

[build-dependencies]
tonic-build = "0.4"