[package]
name = "openvslam-wrap"
version = "0.1.0"
authors = ["Polgár András <azazdeaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "sync", "process", "rt-multi-thread", "time", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.4"
nalgebra = "0.27"
prost = "0.7"
zmq = "0.9"

[build-dependencies]
tonic-build = "0.4"