[package]
name = "robot-main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "sync", "process", "rt-multi-thread", "time", "rt"] }
grpc-server = { path = "../grpc-server"}
openvslam-wrap = { path = "../openvslam-wrap"}
drivers = { path = "../drivers" }
common = { path = "../common" }

[[bin]]
name = "robot"
path = "./src/robot_main.rs"