[package]
name = "robot-main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "sync", "process", "rt-multi-thread", "time", "rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
nalgebra = { version = "0.27", features = ["serde-serialize"] }
ndarray = "0.15.1"

grpc-server = { path = "../grpc-server"}
openvslam-wrap = { path = "../openvslam-wrap"}
drivers = { path = "../drivers" }
detector = { path = "../detector" }
common = { path = "../common" }

[[bin]]
name = "robot"
path = "./src/robot_main.rs"